--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -692,7 +692,7 @@
                                               <widget class="GtkButton" id="button5">
                                                 <property name="height_request">60</property>
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
+                                                <property name="can_focus">False</property>
                                                 <property name="receives_default">True</property>
                                                 <signal name="clicked" handler="on_button_selector_start_jumps_simple_clicked" swapped="no"/>
                                                 <child>
@@ -763,7 +763,7 @@
                                               <widget class="GtkButton" id="button6">
                                                 <property name="height_request">60</property>
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
+                                                <property name="can_focus">False</property>
                                                 <property name="receives_default">True</property>
                                                 <signal name="clicked" handler="on_button_selector_start_jumps_reactive_clicked" swapped="no"/>
                                                 <child>
@@ -1100,7 +1100,7 @@
                                               <widget class="GtkButton" id="button7">
                                                 <property name="height_request">60</property>
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
+                                                <property name="can_focus">False</property>
                                                 <property name="receives_default">True</property>
                                                 <signal name="clicked" handler="on_button_selector_start_runs_simple_clicked" swapped="no"/>
                                                 <child>
@@ -1171,7 +1171,7 @@
                                               <widget class="GtkButton" id="button8">
                                                 <property name="height_request">50</property>
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
+                                                <property name="can_focus">False</property>
                                                 <property name="receives_default">True</property>
                                                 <signal name="clicked" handler="on_button_selector_start_runs_intervallic_clicked" swapped="no"/>
                                                 <child>
@@ -1319,7 +1319,7 @@
                                               <widget class="GtkButton" id="button9">
                                                 <property name="height_request">60</property>
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
+                                                <property name="can_focus">False</property>
                                                 <property name="receives_default">True</property>
                                                 <signal name="clicked" handler="on_button_selector_start_encoder_gravitatory_clicked" swapped="no"/>
                                                 <child>
@@ -1390,7 +1390,7 @@
                                               <widget class="GtkButton" id="button10">
                                                 <property name="height_request">60</property>
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
+                                                <property name="can_focus">False</property>
                                                 <property name="receives_default">True</property>
                                                 <signal name="clicked" handler="on_button_selector_start_encoder_inertial_clicked" swapped="no"/>
                                                 <child>
@@ -18285,6 +18285,9 @@ Concentric</property>
                                                             <child>
                                                             <placeholder/>
                                                             </child>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
@@ -23136,6 +23139,9 @@ by you</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                     </child>
                   </widget>
@@ -23525,6 +23531,9 @@ by you</property>
                             <property name="x_options">GTK_FILL</property>
                             <property name="y_options"/>
                           </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
                         </child>
                         <child>
                           <placeholder/>
@@ -26292,6 +26301,9 @@ by you</property>
               <placeholder/>
             </child>
             <child>
+              <placeholder/>
+            </child>
+            <child>
               <widget class="GtkButton" id="button_video_url">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -26314,6 +26326,9 @@ by you</property>
                 <property name="x_options"/>
                 <property name="y_options"/>
               </packing>
+            </child>
+            <child>
+              <placeholder/>
             </child>
             <child>
               <placeholder/>
@@ -40693,6 +40708,24 @@ options</property>
                             <child>
                               <placeholder/>
                             </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
                           </widget>
                         </child>
                       </widget>
@@ -43984,6 +44017,18 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                     <child>
                       <placeholder/>
                     </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
                   </widget>
                 </child>
               </widget>
@@ -45077,9 +45122,6 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                                       <placeholder/>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
                                       <widget class="GtkLabel" id="label218">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
@@ -45450,6 +45492,9 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                                         <property name="left_attach">2</property>
                                         <property name="right_attach">3</property>
                                       </packing>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
                                     </child>
                                     <child>
                                       <placeholder/>
@@ -51326,6 +51371,9 @@ Other</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                       <packing>
                         <property name="left_attach">2</property>
@@ -51352,6 +51400,9 @@ Other</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options"/>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
@@ -52390,6 +52441,9 @@ Other</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options">GTK_FILL</property>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
